--- a/css/style.css
+++ b/css/style.css
@@ -960,7 +960,8 @@ figure.card figcaption .info h3 {
 
 /*стили для модалки */
 .modal {
-  display:  inline;
+  display:  flex;
+  position: relative;
 }
 
 .page__modal {
